# koyunotlatan

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  app.json  docker-compose.yml  koyunkirpan.pkla  koyunkirpan.service  koyunkirpan.timer  koyunotlatan.pkla  koyunotlatan.service  koyunotlatan.timer  praw.example.ini  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
koyunkirpan/: constants.py  logger.py  main.py  runner.py
koyunotlatan/: binary_comb.py  constants.py  logger.py  main.py  runner.py
koyunotlatan/data/: replies.json
scripts/: release.sh
